# tposts

./: .dockerignore  .env-example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: tests.yaml
src/apps/following/: admin.py  apps.py  models.py  serializers.py  swagger.py  urls.py  views.py
src/apps/following/migrations/: 0001_initial.py
src/apps/following/tests/: test_views.py
src/apps/health/: views.py
src/apps/users/: admin.py  managers.py  models.py  serializers.py  swagger.py  urls.py  views.py
src/apps/users/migrations/: 0001_initial.py  0002_alter_customuser_is_active.py  0003_customuser_is_email_confirmed.py
src/apps/users/tests/: test_managers.py  test_serializers.py  test_views.py
src/apps/utils/: paginations.py  permissions.py
src/config/: settings.py  urls.py
